Fix single-image gallery slide stretching

--- a/frontend/app/styles/components/_gallery.scss
+++ b/frontend/app/styles/components/_gallery.scss
@@ -47,8 +47,14 @@
   height: 536px;
   .gallery-slide {
     max-width: 1600px;
-    // width: 100%;
+    width: 100%;
     height: 536px;
+    a {
+      height: 100%;
+      width: 100%;
+      display: block;
+      background-size: cover;
+    }
   }
   @include media($tablet) {
     height: 440px;
