--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -2014,7 +2014,13 @@ footer {
   height: 536px; }
   .single-image-gallery .gallery-slide {
     max-width: 1600px;
+    width: 100%;
     height: 536px; }
+    .single-image-gallery .gallery-slide a {
+      height: 100%;
+      width: 100%;
+      display: block;
+      background-size: cover; }
   @media screen and (min-width: 480px) and (max-width: 767px) {
     .single-image-gallery {
       height: 440px; }
